--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.corpo{
+    background-color: aquamarine;
+    color: rgb(25, 235, 165);
+    text-align: center;
+}
 #seliga{
     width: 600px;
 }
